@@ -22,6 +22,8 @@
 		- Convert various blob-fields (which are non-blobs actually) to text variants (exeptions are serialized fields and fields that contain XML data)
 	* Fix DB field types for static_tsconfig_help
 	* Fixed bug #7735: EM import was broken because of empty variable
+	* Fixed bug #6547: Allow ignoring of the the no_cache parameter using $TYPO3_CONF_VARS[FE][disableNoCacheParameter] (of course, this is disabled by default)
+	* Report to t3lib_div::sysLog() whenever $TSFE->set_no_cache() is called
 
 2008-03-03  Ingo Renner  <ingo@typo3.org>
 
